@@ -1,3 +1,8 @@
+2010-07-27  MIYAMUKO Katsuyuki
+
+	* (gist.l): Gist API を定義。gist- だけで十分ユニークな名前なので
+	関数名に github- をつけなかった。
+
 2010-07-26  MIYAMUKO Katsuyuki
 
 	* (user.l, object.l, commit.l, issues.l): 一通り動くようになった。戻り値は要修正。
